--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./normalizer-api/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 
   mongodb:
     image: mongo:6
