--- a/normalizer-api/package.json
+++ b/normalizer-api/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "mongoose": "^7.6.0"
+    "mongoose": "^7.6.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.19"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
