--- a/collector-api/package.json
+++ b/collector-api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn collector-api/index.ts"
+    "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.538.0",
