--- a/collector-api/package.json
+++ b/collector-api/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.538.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.6.2",
     "ts-node-dev": "^2.0.0",
