--- a/normalizer-worker/package.json
+++ b/normalizer-worker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collector-api",
+  "name": "normalizer-worker",
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "MIT",
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.538.0",
-    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5"
+    "pg": "^8.11.3",
+    "mongoose": "^7.6.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.19"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.6.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/pg": "^8.6.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
